# AudioRelayHM

./: .gitignore  README.md
hmos/: build-profile.json5
hmos/AppScope/: app.json5
hmos/AppScope/resources/base/element/: string.json
hmos/entry/: build-profile.json5
hmos/entry/src/main/: module.json5
hmos/entry/src/main/cpp/: CMakeLists.txt  opus_decoder.cpp
hmos/entry/src/main/ets/entryability/: EntryAbility.ets
hmos/entry/src/main/ets/entrybackupability/: EntryBackupAbility.ets
hmos/entry/src/main/ets/model/: AudioPacket.ets
hmos/entry/src/main/ets/pages/: Index.ets
hmos/entry/src/main/ets/service/: AudioCapture.ets  AudioPlay.ets  NetworkService.ets  OpusDecoderBridge.ets
hmos/entry/src/main/resources/base/element/: string.json
windows/: AudioRelayWinUI.csproj  MainForm.cs
